--- a/ivy.xml
+++ b/ivy.xml
@@ -19,7 +19,7 @@
         <dependency org="org.postgresql" name="com.springsource.org.postgresql.jdbc4" rev="8.3.604" conf="*->compile" />
         <dependency org="org.apache.log4j" name="com.springsource.org.apache.log4j" rev="1.2.15"  conf="*->compile" />
         
-        <!-- only used in the war compile -->
+        <!-- only used in the compile -->
         <dependency org="javax.servlet" name="servlet-api" rev="2.5" conf="compile->default" />
         
         <!--  only needed in the war -->
@@ -31,7 +31,7 @@
         <dependency org="org.springframework.security" name="org.springframework.security.config" rev="3.0.2.RELEASE" conf="war,compile->compile" />
         <dependency org="org.springframework.security" name="org.springframework.security.acls" rev="3.0.2.RELEASE" conf="war,compile->compile" />
         
-        <dependency org="org.codehaus.jettison" name="com.springsource.org.codehaus.jettison" rev="1.0.1" conf="war,compile->compile" />
+        <dependency org="org.codehaus.jettison" name="jettison" rev="1.2" conf="war,compile->compile" />
         <dependency org="com.thoughtworks.xstream" name="xstream-distribution" rev="1.3" conf="war,compile->compile" />
     </dependencies>
 </ivy-module>
