--- a/ivy.xml
+++ b/ivy.xml
@@ -31,7 +31,7 @@
         <dependency org="org.springframework.security" name="org.springframework.security.config" rev="3.0.2.RELEASE" conf="war,compile->compile" />
         <dependency org="org.springframework.security" name="org.springframework.security.acls" rev="3.0.2.RELEASE" conf="war,compile->compile" />
         
-        <dependency org="org.codehaus.jettison" name="jettison" rev="1.2" conf="war,compile->compile" />
+        <dependency org="org.codehaus.jettison" name="com.springsource.org.codehaus.jettison" rev="1.0.1" conf="war,compile->compile" />
         <dependency org="com.thoughtworks.xstream" name="xstream-distribution" rev="1.3" conf="war,compile->compile" />
     </dependencies>
 </ivy-module>
