--- a/.classpath
+++ b/.classpath
@@ -2,59 +2,43 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="etc"/>
 	<classpathentry kind="src" path="tst"/>
 	<classpathentry kind="src" path="sql"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3"/>
-	<classpathentry kind="lib" path="lib/ivy/compile/com.springsource.org.aopalliance-sources.jar"/>
-	<classpathentry kind="lib" path="lib/ivy/compile/com.springsource.org.aopalliance.jar"/>
-	<classpathentry kind="lib" path="lib/ivy/compile/com.springsource.org.apache.commons.dbcp-sources.jar"/>
-	<classpathentry kind="lib" path="lib/ivy/compile/com.springsource.org.apache.commons.dbcp.jar"/>
-	<classpathentry kind="lib" path="lib/ivy/compile/com.springsource.org.apache.commons.logging-sources.jar"/>
-	<classpathentry kind="lib" path="lib/ivy/compile/com.springsource.org.apache.commons.logging.jar"/>
-	<classpathentry kind="lib" path="lib/ivy/compile/com.springsource.org.apache.commons.pool-sources.jar"/>
-	<classpathentry kind="lib" path="lib/ivy/compile/com.springsource.org.apache.commons.pool.jar"/>
-	<classpathentry kind="lib" path="lib/ivy/compile/com.springsource.org.apache.log4j-sources.jar"/>
-	<classpathentry kind="lib" path="lib/ivy/compile/com.springsource.org.apache.log4j.jar"/>
-	<classpathentry kind="lib" path="lib/ivy/compile/com.springsource.org.codehaus.jettison-sources.jar"/>
-	<classpathentry kind="lib" path="lib/ivy/compile/com.springsource.org.codehaus.jettison.jar"/>
-	<classpathentry kind="lib" path="lib/ivy/compile/com.springsource.org.postgresql.jdbc4-sources.jar"/>
-	<classpathentry kind="lib" path="lib/ivy/compile/com.springsource.org.postgresql.jdbc4.jar"/>
-	<classpathentry kind="lib" path="lib/ivy/compile/org.springframework.aop-sources.jar"/>
-	<classpathentry kind="lib" path="lib/ivy/compile/org.springframework.aop.jar"/>
-	<classpathentry kind="lib" path="lib/ivy/compile/org.springframework.asm-sources.jar"/>
-	<classpathentry kind="lib" path="lib/ivy/compile/org.springframework.asm.jar"/>
-	<classpathentry kind="lib" path="lib/ivy/compile/org.springframework.beans-sources.jar"/>
-	<classpathentry kind="lib" path="lib/ivy/compile/org.springframework.beans.jar"/>
-	<classpathentry kind="lib" path="lib/ivy/compile/org.springframework.context-sources.jar"/>
-	<classpathentry kind="lib" path="lib/ivy/compile/org.springframework.context.jar"/>
-	<classpathentry kind="lib" path="lib/ivy/compile/org.springframework.context.support-sources.jar"/>
-	<classpathentry kind="lib" path="lib/ivy/compile/org.springframework.context.support.jar"/>
-	<classpathentry kind="lib" path="lib/ivy/compile/org.springframework.core-sources.jar"/>
-	<classpathentry kind="lib" path="lib/ivy/compile/org.springframework.core.jar"/>
-	<classpathentry kind="lib" path="lib/ivy/compile/org.springframework.expression-sources.jar"/>
-	<classpathentry kind="lib" path="lib/ivy/compile/org.springframework.expression.jar"/>
-	<classpathentry kind="lib" path="lib/ivy/compile/org.springframework.jdbc-sources.jar"/>
-	<classpathentry kind="lib" path="lib/ivy/compile/org.springframework.jdbc.jar"/>
-	<classpathentry kind="lib" path="lib/ivy/compile/org.springframework.oxm-sources.jar"/>
-	<classpathentry kind="lib" path="lib/ivy/compile/org.springframework.oxm.jar"/>
-	<classpathentry kind="lib" path="lib/ivy/compile/org.springframework.security.acls-sources.jar"/>
-	<classpathentry kind="lib" path="lib/ivy/compile/org.springframework.security.acls.jar"/>
-	<classpathentry kind="lib" path="lib/ivy/compile/org.springframework.security.config-sources.jar"/>
-	<classpathentry kind="lib" path="lib/ivy/compile/org.springframework.security.config.jar"/>
-	<classpathentry kind="lib" path="lib/ivy/compile/org.springframework.security.core-sources.jar"/>
-	<classpathentry kind="lib" path="lib/ivy/compile/org.springframework.security.core.jar"/>
-	<classpathentry kind="lib" path="lib/ivy/compile/org.springframework.security.web-sources.jar"/>
-	<classpathentry kind="lib" path="lib/ivy/compile/org.springframework.security.web.jar"/>
-	<classpathentry kind="lib" path="lib/ivy/compile/org.springframework.transaction-sources.jar"/>
-	<classpathentry kind="lib" path="lib/ivy/compile/org.springframework.transaction.jar"/>
-	<classpathentry kind="lib" path="lib/ivy/compile/org.springframework.web-sources.jar"/>
-	<classpathentry kind="lib" path="lib/ivy/compile/org.springframework.web.jar"/>
-	<classpathentry kind="lib" path="lib/ivy/compile/org.springframework.web.servlet-sources.jar"/>
-	<classpathentry kind="lib" path="lib/ivy/compile/org.springframework.web.servlet.jar"/>
-	<classpathentry kind="lib" path="lib/ivy/compile/servlet-api.jar"/>
-	<classpathentry kind="lib" path="lib/ivy/compile/xpp3_min.jar"/>
-	<classpathentry kind="lib" path="lib/ivy/compile/xstream-benchmark.jar"/>
-	<classpathentry kind="lib" path="lib/ivy/compile/xstream.jar"/>
-	<classpathentry kind="lib" path="lib/local/sam/sam-1.24.jar"/>
+	<classpathentry kind="lib" path="lib/local/sam/picard-1.27.jar"/>
+	<classpathentry kind="lib" path="lib/local/sam/sam-1.27.jar"/>
+	<classpathentry kind="lib" path="lib/ivy/compile/jar-com.springsource.org.aopalliance-com.springsource.org.aopalliance-1.0.0.jar"/>
+	<classpathentry kind="lib" path="lib/ivy/compile/jar-com.springsource.org.apache.commons.dbcp-com.springsource.org.apache.commons.dbcp-1.2.2.osgi.jar"/>
+	<classpathentry kind="lib" path="lib/ivy/compile/jar-com.springsource.org.apache.commons.logging-com.springsource.org.apache.commons.logging-1.1.1.jar"/>
+	<classpathentry kind="lib" path="lib/ivy/compile/jar-com.springsource.org.apache.commons.pool-com.springsource.org.apache.commons.pool-1.3.0.jar"/>
+	<classpathentry kind="lib" path="lib/ivy/compile/jar-com.springsource.org.apache.log4j-com.springsource.org.apache.log4j-1.2.15.jar"/>
+	<classpathentry kind="lib" path="lib/ivy/compile/jar-com.springsource.org.codehaus.jettison-com.springsource.org.codehaus.jettison-1.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/ivy/compile/jar-com.springsource.org.postgresql.jdbc4-com.springsource.org.postgresql.jdbc4-8.3.604.jar"/>
+	<classpathentry kind="lib" path="lib/ivy/compile/jar-commons-lang-commons-lang-2.5.jar"/>
+	<classpathentry kind="lib" path="lib/ivy/compile/jar-lucene-core-lucene-core-3.0.2.jar"/>
+	<classpathentry kind="lib" path="lib/ivy/compile/jar-org.springframework.aop-org.springframework.aop-3.0.2.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/ivy/compile/jar-org.springframework.asm-org.springframework.asm-3.0.2.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/ivy/compile/jar-org.springframework.beans-org.springframework.beans-3.0.2.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/ivy/compile/jar-org.springframework.context-org.springframework.context-3.0.2.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/ivy/compile/jar-org.springframework.context.support-org.springframework.context.support-3.0.2.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/ivy/compile/jar-org.springframework.core-org.springframework.core-3.0.2.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/ivy/compile/jar-org.springframework.expression-org.springframework.expression-3.0.2.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/ivy/compile/jar-org.springframework.jdbc-org.springframework.jdbc-3.0.2.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/ivy/compile/jar-org.springframework.oxm-org.springframework.oxm-3.0.2.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/ivy/compile/jar-org.springframework.security.acls-org.springframework.security.acls-3.0.2.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/ivy/compile/jar-org.springframework.security.config-org.springframework.security.config-3.0.2.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/ivy/compile/jar-org.springframework.security.core-org.springframework.security.core-3.0.2.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/ivy/compile/jar-org.springframework.security.web-org.springframework.security.web-3.0.2.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/ivy/compile/jar-org.springframework.transaction-org.springframework.transaction-3.0.2.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/ivy/compile/jar-org.springframework.web-org.springframework.web-3.0.2.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/ivy/compile/jar-org.springframework.web.servlet-org.springframework.web.servlet-3.0.2.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/ivy/compile/jar-servlet-api-servlet-api-2.5.jar"/>
+	<classpathentry kind="lib" path="lib/ivy/compile/jar-xpp3_min-xpp3_min-1.1.4c.jar"/>
+	<classpathentry kind="lib" path="lib/ivy/compile/jar-xstream-benchmark-xstream-benchmark-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/ivy/compile/jar-xstream-xstream-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/local/artemis.jar"/>
+	<classpathentry kind="lib" path="lib/local/jewelcli-0.6.jar"/>
+	<classpathentry kind="lib" path="lib/ivy/compile/jar-gson-gson-1.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
