--- a/.classpath
+++ b/.classpath
@@ -40,5 +40,6 @@
 	<classpathentry kind="lib" path="lib/local/artemis.jar"/>
 	<classpathentry kind="lib" path="lib/local/jewelcli-0.6.jar"/>
 	<classpathentry kind="lib" path="lib/ivy/compile/jar-gson-gson-1.4.jar"/>
+	<classpathentry kind="lib" path="lib/ivy/compile/jar-jyaml-jyaml-1.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
