--- a/.classpath
+++ b/.classpath
@@ -41,5 +41,7 @@
 	<classpathentry kind="lib" path="lib/local/jewelcli-0.6.jar"/>
 	<classpathentry kind="lib" path="lib/ivy/compile/jar-gson-gson-1.4.jar"/>
 	<classpathentry kind="lib" path="lib/ivy/compile/jar-jyaml-jyaml-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/ivy/compile/jar-commons-cli-commons-cli-1.2.jar"/>
+	<classpathentry kind="lib" path="lib/ivy/compile/jar-args4j-args4j-2.0.12.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
