--- a/ivy.xml
+++ b/ivy.xml
@@ -32,18 +32,32 @@
         <dependency org="commons-lang" name="commons-lang" rev="2.5"  />
         <!--  <dependency org="org.apache.commons" name="com.springsource.org.apache.commons.lang" rev="2.1.0" conf="*->compile"  /> -->
         
+        <dependency org="args4j" name="args4j" rev="2.0.12"/>
+
+        
+        
+        
         
         <!-- only used in the compile -->
         <dependency org="javax.servlet" name="servlet-api" rev="2.5" conf="compile->default" />
+        
+        
+        
         
         <!--  only needed in the war -->
         <dependency org="org.springframework" name="org.springframework.web.servlet" rev="3.0.2.RELEASE" conf="war,compile->compile" />
         <dependency org="org.springframework" name="org.springframework.context.support" rev="3.0.2.RELEASE" conf="war,compile->compile" />
         <dependency org="org.springframework" name="org.springframework.transaction" rev="3.0.2.RELEASE"  conf="war,compile->compile" />
+        
+        <dependency org="net.sourceforge.cglib" name="com.springsource.net.sf.cglib" rev="2.2.0" />
+        
+        
+        <!-- 
         <dependency org="org.springframework.security" name="org.springframework.security.core" rev="3.0.2.RELEASE" conf="war,compile->compile" />
         <dependency org="org.springframework.security" name="org.springframework.security.web" rev="3.0.2.RELEASE" conf="war,compile->compile" />
         <dependency org="org.springframework.security" name="org.springframework.security.config" rev="3.0.2.RELEASE" conf="war,compile->compile" />
         <dependency org="org.springframework.security" name="org.springframework.security.acls" rev="3.0.2.RELEASE" conf="war,compile->compile" />
+         -->
         
         <dependency org="org.codehaus.jettison" name="com.springsource.org.codehaus.jettison" rev="1.0.1" conf="war,compile->compile" />
         <dependency org="com.thoughtworks.xstream" name="xstream-distribution" rev="1.3" conf="war,compile->compile" />
