--- a/war/WEB-INF/log4j.properties
+++ b/war/WEB-INF/log4j.properties
@@ -1,6 +1,5 @@
-# For JBoss: Avoid to setup Log4J outside $JBOSS_HOME/server/default/deploy/log4j.xml!
 # For all other servers: Comment out the Log4J listener in web.xml to activate Log4J.
-log4j.rootLogger=DEBUG, stdout, logfile
+log4j.rootLogger=INFO, stdout, logfile
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
@@ -15,8 +14,9 @@ log4j.appender.logfile.MaxBackupIndex=3
 log4j.appender.logfile.layout=org.apache.log4j.PatternLayout
 log4j.appender.logfile.layout.ConversionPattern=%d %p [%c] - %m%n
 
-log4j.logger.org.genedb.crawl=DEBUG
-log4j.logger.org.genedb.crawl.business.GenerateLuceneIndex=DEBUG
+log4j.logger.org.genedb.crawl=INFO
+
+#log4j.logger.org.genedb.crawl.business.GenerateLuceneIndex=DEBUG
 
 #log4j.logger.org.springframework.security=DEBUG
 #log4j.logger.org.springframework.web.context=DEBUG
