--- a/gff3-Pfalciparum.properties
+++ b/gff3-Pfalciparum.properties
@@ -1,6 +1,7 @@
 deploy.dir=/Users/gv1/bin/tomcat/webapps/
+deploy.name=crawl-gff
 
-fileStorePath=/Volumes/us/db/heirarchy
+fileStorePath=/Users/gv1/Documents/Data/heirarchy
 
 luceneDirectory=/Users/gv1/Documents/Data/lucene
 tabixDirectory=/Users/gv1/Documents/Data/out
