Mybatis ant, ivy and ecplipse config.
git-svn-id: svn+ssh://svn.internal.sanger.ac.uk/repos/svn/pathsoft/psu/trunk/genlib/java/crawl@15055 ee4ac58c-ac51-4696-9907-e4b3aa274f04

--- a/build.xml
+++ b/build.xml
@@ -93,11 +93,13 @@
 	
 	<copy file="etc/config/crawl-${resource.type}.xml" tofile="war/WEB-INF/crawl-repository.xml" overwrite="true" />
 	
+	
 	<copy file="${config}.properties" tofile="war/WEB-INF/classes/project.properties" overwrite="true" />
 	
 	<copy todir="war/WEB-INF/classes/sql">
         <fileset dir="sql/">
             <include name="**/*.sql"/>
+        	<include name="**/*.xml"/>
         </fileset>
         <mapper type="flatten"/>
     </copy>
