--- a/ivy.xml
+++ b/ivy.xml
@@ -20,10 +20,11 @@
         <dependency org="org.postgresql" name="com.springsource.org.postgresql.jdbc4" rev="8.3.604" conf="*->compile" />
         <dependency org="org.apache.log4j" name="com.springsource.org.apache.log4j" rev="1.2.15"  conf="*->compile" />
         
+        
         <dependency org="com.google.code.gson" name="gson" rev="1.4" />
         <dependency org="org.jyaml" name="jyaml" rev="1.3"/>
         
-        <dependency org="org.mortbay.jetty" name="jetty-runner" rev="7.1.6.v20100715"/>
+        
         
         
         <dependency org="org.apache.lucene" name="lucene-core" rev="3.0.2" />
@@ -39,7 +40,7 @@
         
         <!-- only used in the compile -->
         <dependency org="javax.servlet" name="servlet-api" rev="2.5" conf="compile->default" />
-        
+        <dependency org="org.mortbay.jetty" name="jetty-runner" rev="7.2.0.RC0" conf="compile->default" />
         
         
         
