Added more regions and feature queries.
git-svn-id: svn+ssh://svn.internal.sanger.ac.uk/repos/svn/pathsoft/psu/trunk/genlib/java/crawl@15145 ee4ac58c-ac51-4696-9907-e4b3aa274f04

--- a/war/WEB-INF/log4j.properties
+++ b/war/WEB-INF/log4j.properties
@@ -14,7 +14,10 @@ log4j.appender.logfile.MaxBackupIndex=3
 log4j.appender.logfile.layout=org.apache.log4j.PatternLayout
 log4j.appender.logfile.layout.ConversionPattern=%d %p [%c] - %m%n
 
-log4j.logger.org.genedb.crawl=INFO
+log4j.logger.org.genedb.crawl=DEBUG
+log4j.logger.java.sql=DEBUG
+log4j.logger.com.ibatis=DEBUG
+log4j.logger.org.postgresql=DEBUG
 
 #log4j.logger.org.genedb.crawl.business.GenerateLuceneIndex=DEBUG
 
