--- a/build.xml
+++ b/build.xml
@@ -95,7 +95,7 @@
 </target>
 -->
 
-<target name="compile" depends="setup,resolve-compile" >
+<target name="compile" depends="setup" >
     <javac fork="true"
         debug="true"
         verbose="${verbose}"
@@ -105,6 +105,7 @@
         classpathref="lib.compile.path"
         />
 </target>
+	
 
 <target name="compile-test" depends="compile" >
     <javac fork="true"
@@ -117,8 +118,9 @@
         />
 </target>
 
-	
-<target name="package-war" depends="compile,resolve-war" >
+
+
+<target name="package-war" depends="compile" >
     
 	<fail message="The 'config' property must be set" unless="config"/>
 	<fail message="The 'deploy.name' property must be set" unless="deploy.name" />
@@ -181,9 +183,8 @@
 	
 </target>
 
-	
 
-<target name="package-jar" depends="compile,resolve-jar" >
+<target name="package-jar" depends="compile" >
 	
 	<!-- generate a path string for use in the crawl.jar manifest -->
 	<pathconvert property="jarclasspath" pathsep=" ">
@@ -259,6 +260,9 @@
 	</junit>  
 	
 </target>
+
+<target name="resolve" depends="setup,resolve-compile,resolve-war,resolve-jar" />
+<target name="setup-complete" depends="resolve,package-jar" />
 
 	
 <target name="GenerateLuceneIndices" >
