Added a delete of war/WEB-INF/crawl-repository.xml to the clean task.
git-svn-id: svn+ssh://svn.internal.sanger.ac.uk/repos/svn/pathsoft/psu/trunk/genlib/java/crawl@15277 ee4ac58c-ac51-4696-9907-e4b3aa274f04

--- a/build.xml
+++ b/build.xml
@@ -11,7 +11,6 @@
 </path>	
 <taskdef resource="org/apache/ivy/ant/antlib.xml" uri="antlib:org.apache.ivy.ant" classpathref="ivy.lib.path"/>
 	
-
 <property file="${config}.properties" />
 
 <property name="build.war.home" value="${basedir}/out" />
@@ -60,6 +59,7 @@
     <delete dir="${ivy.lib.dir}" includeEmptyDirs="true"/>
 	<delete dir="${report.home}" includeEmptyDirs="true"/>
 	<delete dir="war/WEB-INF/classes/" includeEmptyDirs="true"/>
+	<delete file="war/WEB-INF/crawl-repository.xml" />
 </target>
 
 
