--- a/etc/log4j.properties
+++ b/etc/log4j.properties
@@ -2,5 +2,9 @@ log4j.rootLogger=INFO, stdout
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=[%p] %m%n
+log4j.appender.stdout.layout.ConversionPattern=%p [%c] %m%n
 
+log4j.logger.org.genedb.crawl=DEBUG
+log4j.logger.java.sql=DEBUG
+log4j.logger.com.ibatis=DEBUG
+log4j.logger.org.postgresql=DEBUG
