--- a/ivy.xml
+++ b/ivy.xml
@@ -22,8 +22,9 @@
         
         
         <dependency org="com.google.code.gson" name="gson" rev="1.4" />
+        <dependency org="org.simpleframework" name="simple-xml" rev="2.4"/>
         <dependency org="org.jyaml" name="jyaml" rev="1.3"/>
-        
+        <dependency org="org.codehaus.jackson" name="jackson-xc" rev="1.6.2"/>
         
         
         
@@ -35,8 +36,8 @@
         
         <dependency org="args4j" name="args4j" rev="2.0.12"/>
 
-        <dependency org="org.mybatis" name="mybatis" rev="3.0.2"/>
-        <dependency org="org.mybatis" name="mybatis-spring" rev="1.0.0-RC2"/>
+        <dependency org="org.mybatis" name="mybatis" rev="3.0.4"/>
+        <dependency org="org.mybatis" name="mybatis-spring" rev="1.0.0"/>
         
         <!-- only used in the compile -->
         <dependency org="javax.servlet" name="servlet-api" rev="2.5" conf="compile->default" />
@@ -62,5 +63,12 @@
         
         <dependency org="org.codehaus.jettison" name="com.springsource.org.codehaus.jettison" rev="1.0.1" conf="war,compile->compile" />
         <dependency org="com.thoughtworks.xstream" name="xstream-distribution" rev="1.3" conf="war,compile->compile" />
-    </dependencies>
+        
+        <!--<dependency org="terrastore" name="terrastore-javaclient" rev="2.2"  />
+        <dependency org="terrastore" name="terrastore" rev="0.8.0"  />
+        
+    -->
+        <dependency org="org.elasticsearch" name="elasticsearch" rev="0.14.4" />
+    
+        </dependencies>
 </ivy-module>
