--- a/war/WEB-INF/log4j.properties
+++ b/war/WEB-INF/log4j.properties
@@ -3,7 +3,7 @@ log4j.rootLogger=INFO, stdout, logfile
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d %p [%c] (%F:%L) - <%m>%n
+log4j.appender.stdout.layout.ConversionPattern=%d %p %F:%L - <%m>%n
 
 log4j.appender.logfile=org.apache.log4j.RollingFileAppender
 log4j.appender.logfile.File=${catalina.home}/logs/crawl.log
@@ -16,7 +16,7 @@ log4j.appender.logfile.layout.ConversionPattern=%d %p [%c] - %m%n
 
 log4j.logger.org.genedb.crawl=DEBUG
 log4j.logger.java.sql=DEBUG
-log4j.logger.com.ibatis=DEBUG
+log4j.logger.com.ibatis=TRACE
 log4j.logger.org.postgresql=DEBUG
 
 #log4j.logger.org.genedb.crawl.business.GenerateLuceneIndex=DEBUG
