updated the .classpath
git-svn-id: svn+ssh://svn.internal.sanger.ac.uk/repos/svn/pathsoft/psu/trunk/genlib/java/crawl@15431 ee4ac58c-ac51-4696-9907-e4b3aa274f04

--- a/.classpath
+++ b/.classpath
@@ -58,5 +58,6 @@
 	<classpathentry kind="lib" path="lib/local/jewelcli-0.6.jar"/>
 	<classpathentry kind="lib" path="lib/local/picard-1.27.jar"/>
 	<classpathentry kind="lib" path="lib/local/sam-1.27.jar"/>
+	<classpathentry kind="lib" path="lib/ivy/compile/jar-elasticsearch-elasticsearch-0.14.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
