--- a/.classpath
+++ b/.classpath
@@ -58,6 +58,10 @@
 	<classpathentry kind="lib" path="lib/local/jewelcli-0.6.jar"/>
 	<classpathentry kind="lib" path="lib/local/picard-1.27.jar"/>
 	<classpathentry kind="lib" path="lib/local/sam-1.27.jar"/>
-	<classpathentry kind="lib" path="lib/ivy/compile/jar-elasticsearch-elasticsearch-0.14.4.jar"/>
+	<classpathentry kind="lib" path="lib/ivy/compile/jar-elasticsearch-elasticsearch-0.14.4.jar" sourcepath="lib/ivy/compile/source-elasticsearch-elasticsearch-0.14.4.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/crawl/lib/ivy/compile/javadoc-elasticsearch-elasticsearch-0.14.4.jar!/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
