updated the .classpath
git-svn-id: svn+ssh://svn.internal.sanger.ac.uk/repos/svn/pathsoft/psu/trunk/genlib/java/crawl@15434 ee4ac58c-ac51-4696-9907-e4b3aa274f04

--- a/.classpath
+++ b/.classpath
@@ -63,5 +63,9 @@
 			<attribute name="javadoc_location" value="jar:platform:/resource/crawl/lib/ivy/compile/javadoc-elasticsearch-elasticsearch-0.14.4.jar!/"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="lib/ivy/compile/jar-jackson-core-asl-jackson-core-asl-1.6.2.jar"/>
+	<classpathentry kind="lib" path="lib/ivy/compile/jar-jackson-mapper-asl-jackson-mapper-asl-1.6.2.jar"/>
+	<classpathentry kind="lib" path="lib/ivy/compile/jar-jackson-xc-jackson-xc-1.6.2.jar"/>
+	<classpathentry kind="lib" path="lib/ivy/compile/jar-mybatis-mybatis-3.0.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
