--- a/gff3-Pfalciparum.properties
+++ b/gff3-Pfalciparum.properties
@@ -7,3 +7,6 @@ luceneDirectory=/Users/gv1/Documents/Data/lucene
 tabixDirectory=/Users/gv1/Documents/Data/out
 
 resource.type=gff3-lucene
+
+alignments=/Users/gv1/Documents/Code/alignments.json
+showParameters=true
