--- a/gff3-Pfalciparum.properties
+++ b/gff3-Pfalciparum.properties
@@ -6,7 +6,7 @@ fileStorePath=/Users/gv1/Documents/Data/heirarchy
 luceneDirectory=/Users/gv1/Documents/Data/lucene
 tabixDirectory=/Users/gv1/Documents/Data/out
 
-resource.type=gff3-lucene
+resource.type=elasticsearch
 
 alignments=/Users/gv1/Documents/Code/alignments.json
 showParameters=true
