--- a/ivy.xml
+++ b/ivy.xml
@@ -3,72 +3,37 @@
         <configurations>
             <conf name="war" />
             <conf name="jar"  />
+            <conf name="jetty"  />
             <conf name="compile" />
-        
-            <!-- 
-            <conf name="package" /> 
-            <conf name="build" extends="package"/>
-             -->
         </configurations>
     <dependencies>
     
-        <!--  having more luck retrieving jars from http://mvnrepository.com/ -->
         <!-- shared by all -->
-        <dependency org="org.springframework" name="org.springframework.jdbc" rev="3.0.5.RELEASE" conf="*->compile" />
-        <dependency org="org.apache.commons" name="com.springsource.org.apache.commons.dbcp" rev="1.2.2.osgi" conf="*->compile" />
-        <!--  <dependency org="postgresql" name="postgresql" rev="8.4-701.jdbc3" />  -->
         <dependency org="org.postgresql" name="com.springsource.org.postgresql.jdbc4" rev="8.3.604" conf="*->compile" />
-        <dependency org="org.apache.log4j" name="com.springsource.org.apache.log4j" rev="1.2.15"  conf="*->compile" />
-        
-        
-        <dependency org="com.google.code.gson" name="gson" rev="1.4" />
-        <dependency org="org.simpleframework" name="simple-xml" rev="2.4"/>
-        <dependency org="org.jyaml" name="jyaml" rev="1.3"/>
-        <dependency org="org.codehaus.jackson" name="jackson-xc" rev="1.6.2"/>
-        
-        
-        
-        <dependency org="org.apache.lucene" name="lucene-core" rev="3.0.2" />
-        <!-- <dependency org="org.apache.lucene" name="com.springsource.org.apache.lucene" rev="2.4.1" />-->
-        
-        <dependency org="commons-lang" name="commons-lang" rev="2.5"  />
-        <!--  <dependency org="org.apache.commons" name="com.springsource.org.apache.commons.lang" rev="2.1.0" conf="*->compile"  /> -->
-        
-        <dependency org="args4j" name="args4j" rev="2.0.12"/>
-
         <dependency org="org.mybatis" name="mybatis" rev="3.0.4"/>
-        <dependency org="org.mybatis" name="mybatis-spring" rev="1.0.0"/>
         
-        <!-- only used in the compile -->
+        <dependency org="org.apache.log4j" name="com.springsource.org.apache.log4j" rev="1.2.16"  conf="*->compile" />
+        <dependency org="org.codehaus.jackson" name="jackson-xc" rev="1.6.2"/>
+        <dependency org="commons-lang" name="commons-lang" rev="2.5"  />
+        <dependency org="org.elasticsearch" name="elasticsearch" rev="0.15.0" />
+        
+        <!-- only needed at compile time -->
         <dependency org="javax.servlet" name="servlet-api" rev="2.5" conf="compile->default" />
-        <dependency org="org.mortbay.jetty" name="jetty-runner" rev="7.3.0.v20110203" conf="compile->default" />
         <dependency org="junit" name="junit" rev="4.8.2" conf="compile->default" />
         
+        <!--  only ever needed to run jetty -->
+        <dependency org="org.mortbay.jetty" name="jetty-runner" rev="7.2.0.RC0" conf="jetty->default"/>
         
+        <!--  only ever needed for the jar -->
+        <dependency org="args4j" name="args4j" rev="2.0.12" conf="jar,compile->default" />
         
         <!--  only needed in the war -->
+        <dependency org="org.apache.commons" name="com.springsource.org.apache.commons.dbcp" rev="1.2.2.osgi" conf="war,compile->compile" />
         <dependency org="org.springframework" name="org.springframework.web.servlet" rev="3.0.5.RELEASE" conf="war,compile->compile" />
         <dependency org="org.springframework" name="org.springframework.context.support" rev="3.0.5.RELEASE" conf="war,compile->compile" />
         <dependency org="org.springframework" name="org.springframework.transaction" rev="3.0.5.RELEASE"  conf="war,compile->compile" />
+        <dependency org="org.springframework" name="org.springframework.jdbc" rev="3.0.5.RELEASE" conf="war,compile->compile" />
+        <dependency org="org.mybatis" name="mybatis-spring" rev="1.0.0" conf="war,compile->*"/>
         
-        <dependency org="net.sourceforge.cglib" name="com.springsource.net.sf.cglib" rev="2.2.0" />
-        
-        
-        <!-- 
-        <dependency org="org.springframework.security" name="org.springframework.security.core" rev="3.0.5.RELEASE" conf="war,compile->compile" />
-        <dependency org="org.springframework.security" name="org.springframework.security.web" rev="3.0.5.RELEASE" conf="war,compile->compile" />
-        <dependency org="org.springframework.security" name="org.springframework.security.config" rev="3.0.5.RELEASE" conf="war,compile->compile" />
-        <dependency org="org.springframework.security" name="org.springframework.security.acls" rev="3.0.5.RELEASE" conf="war,compile->compile" />
-         -->
-        
-        <dependency org="org.codehaus.jettison" name="com.springsource.org.codehaus.jettison" rev="1.0.1" conf="war,compile->compile" />
-        <dependency org="com.thoughtworks.xstream" name="xstream-distribution" rev="1.3" conf="war,compile->compile" />
-        
-        <!--<dependency org="terrastore" name="terrastore-javaclient" rev="2.2"  />
-        <dependency org="terrastore" name="terrastore" rev="0.8.0"  />
-        
-    -->
-        <dependency org="org.elasticsearch" name="elasticsearch" rev="0.15.0" />
-    
-        </dependencies>
+    </dependencies>
 </ivy-module>
